Fixed scrolling of webpage on mobile/tablet device (position: fixed; top: 0px; bottom: 0px)

--- a/client/src/styles/forgotpassword.css
+++ b/client/src/styles/forgotpassword.css
@@ -7,11 +7,9 @@
     background-position: center;
     width: 100%;
     height: 100vh;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: fixed; 
+    top: 0px;
+    bottom: 0px;
 }
 
 .forgot-password-form {
