--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -8,8 +8,8 @@
     height: 100vh;
     width: 100%;
     position: fixed; 
-    top: 0;
-    bottom: 0
+    top: 0px;
+    bottom: 0px;
 }
 
 .info-unauthenticated {
