--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -7,7 +7,9 @@
     background-position: center;
     width: 100%;
     height: 100vh;
-    max-height: 100%;
+    position: fixed; 
+    top: 0px;
+    bottom: 0px;
 }
 
 .login-form {
