--- a/client/src/styles/register.css
+++ b/client/src/styles/register.css
@@ -7,6 +7,9 @@
     background-position: center;
     width: 100%;
     height: 100vh;
+    position: fixed; 
+    top: 0px;
+    bottom: 0px;
 }
 
 .register-form {
